--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,20 @@ h1 {
     color: #252525
 }
 
+#menu   {
+    size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+#menu > li {
+    margin-bottom: 1em;
+}
+
 /* main */
 main {
     background-color: lightblue;
