Display navbar items, hide toggle label

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     /*Generic project styles */
-    color:#3a3a3a;
+    color: #3a3a3a;
     font-family: 'Lato', sans-serif;
 
 }
@@ -29,7 +29,7 @@ header {
     z-index: 99;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
-    display:flex;
+    display: flex;
     justify-content: space-between;
     align-items: baseline;
 
@@ -47,13 +47,13 @@ h1 {
     color: #252525
 }
 
-#menu   {
+#menu {
     size: 110%;
     letter-spacing: 4px;
     list-style-type: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
@@ -62,10 +62,10 @@ h1 {
 }
 
 /* Navbar styles with dropdown toggle*/
-nav{
+nav {
     position: absolute;
     background-color: #ffffff;
-    width:100%;
+    width: 100%;
     left: 0;
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
@@ -75,16 +75,17 @@ nav{
 
 /*Nav toggle*/
 #nav-toggle:checked~nav {
-    display:block;
+    display: block;
 }
 
 #nav-toggle {
-    display:none;
+    display: none;
 }
 
 .nav-toggle-label {
-    font-size:2rem;
+    font-size: 2rem;
 }
+
 /* main content*/
 main {
     background-color: lightblue;
@@ -96,4 +97,30 @@ main {
 /* main */
 footer {
     background-color: orange
+}
+
+/* Media Query: tablets and larger (768px and up)*/
+@media screen and (min-width: 768px) {
+
+    /* Header */
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu>li {
+        padding-left: 1rem;
+    }
+
+    .nav-toggle-label {
+        display: none
+    }
+
 }
