--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,3 +137,12 @@ footer {
     }
 
 }
+
+/* Larger devices (laptops and desktops, 992px and up)*/
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
+
+
+}
