--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,16 @@ body {
 
 }
 
+h1,
+h2,
+h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525
+}
+
+
 
 /* header */
 header {
@@ -40,12 +50,7 @@ header a {
     color: inherit;
 }
 
-h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525
-}
+
 
 #menu {
     size: 110%;
@@ -99,6 +104,24 @@ main {
     height: 600px;
     width: 100%;
     background: url(../images/hero-image.webp) no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    /* Final rgba value sets the opacity so it is semi-transparent*/
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text>h2,
+#cover-text>h3 {
+    color: #ffffff;
 }
 
 /* footer */
@@ -155,6 +178,11 @@ main {
         margin-top: 79px;
     }
 
+    /* Hero*/
+    #cover-text {
+        width: 300px;
+        right: 50px;
+    }
 }
 
 /* Larger devices (laptops and desktops, 992px and up)*/
