--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,6 +161,21 @@ hr {
     justify-content: center;
 }
 
+/*meet-up times section*/
+#times {
+    background: url(../images/dublin-city.webp) no-repeat center / cover;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+}
+
+
 /* footer */
 #social-networks {
     text-align: center;
