styled reasons section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,17 @@ hr {
     background-color: rgba(0, 0, 0, .6);
     padding: 15px;
     text-align: center;
+    /*This will not wrap on screens of less than 400px wide.
+    Each div will expand to fill the available space on its rowz*/
+    flex-basis: 200px;
+    flex-grow: 1;
+    /*Creates a grid of meetuo time divs over the background image*/
+    border: 2px solid white;
+
+}
+
+#times h3 {
+    color: #fafafa; 
 }
 
 
