add styling to gallery for mobile phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,15 @@ hr {
     color: #fafafa;
 }
 
+/*Gallery page*/
+#photos img {
+    width: 100%;
+}
+
+#photos {
+    line-height: 0;
+}
+
 /* footer */
 #social-networks {
     text-align: center;
