--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,6 +219,7 @@ hr {
 
 #signup h2 {
     color: #fafafa;
+    padding-bottom: 20px;
 }
 
 #signup-form {
@@ -232,7 +233,20 @@ hr {
     color: #fafafa;
     border: 1px solid #fafafa;
     border-radius: 2px;
+    width: 100%;
+    height: 25px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 20px;
 }
+
+.radio-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+
 
 /* footer */
 #social-networks {
