--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,13 +211,10 @@ hr {
     background-size: cover;
     background-position: 75%;
     flex-grow: 1;
-    padding-left: 10px;
-    padding-top: 20px;
-    padding-right: 10px;
-
+    padding: 20px 10% 0 10%;
 }
 
-#signup h2 {
+#signup-form>h2 {
     color: #fafafa;
     padding-bottom: 20px;
 }
@@ -235,15 +232,24 @@ hr {
     border-radius: 2px;
     width: 100%;
     height: 25px;
-    padding-left: 5px;
-    padding-right: 5px;
-    margin-top: 5px;
-    margin-bottom: 20px;
+    padding: 0 5px;
+    margin: 5px 0 20px 0;
+
 }
 
 .radio-buttons {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+}
+
+.join-button {
+    margin-top: 20px;
+    padding: 15px 32px;
+    border-radius: 2px;
+    background-color: #454b1b;
+    font-size: 100%;
+    color: #fafafa;
 }
 
 
