--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,6 +343,28 @@ hr {
         column-count: 3;
 
     }
+
+    /* Signup form*/
+    #signup {
+        background-position: center;
+        position: relative;
+    }
+
+    #signup-form {
+        position: absolute;
+        max-width: 400px;
+        left: 10%;
+        top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
+    }
 }
 
 /* Larger devices (laptops and desktops, 992px and up)*/
