--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ header a {
 }
 
 #menu {
-    size: 110%;
+    font-size: 110%;
     letter-spacing: 4px;
     list-style-type: none;
 }
@@ -152,7 +152,7 @@ main {
 
 hr {
     border-top: 1px solid #3a3a3a;
-    margin: 5px, 0;
+    margin: 5px 0;
 }
 
 #circle-cover-bg {
